fix: make header responsive
by using hardcoded padding, header elements are crushed and misaligned on smaller, thinner screens. instead, by using width 50vw (50% of viewport's width) this works on smaller screens (to a certain degree)

--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 500px;
+    width: 50vw;
+    margin: 0 auto;
+    padding: 20px 0;
 }
 
 a {
